--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
     "react-test-renderer": "^16.9.0"
   }
