--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "heritage",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://csheritage.github.io/Heritage-Front",
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
+    "gh-pages": "^2.1.1",
     "react-test-renderer": "^16.9.0"
   }
 }
