--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "heritage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://csheritage.github.io/Heritage-Front",
+  "homepage": "https://csheritage.github.io/Heritage-Front/",
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
